--- a/cadastro.css
+++ b/cadastro.css
@@ -1,4 +1,9 @@
- 
+ * {
+  font-family: "Crimson Pro", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+ }
+
   html::after {
     content: "";
     position: absolute;
