--- a/login.css
+++ b/login.css
@@ -1,3 +1,9 @@
+ * {
+  font-family: "Crimson Pro", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+ }
+
 body {
     
   background-color: #f5e1ce;
