--- a/feedback.css
+++ b/feedback.css
@@ -1,108 +1,100 @@
  * {
-  font-family: "Crimson Pro", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
- }
-
-body {
-    
-    background-color: #f5e1ce;
-    font-family: Georgia, serif;
-  text-align: center;
+    font-family: "Crimson Pro", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+   }
   
-  }
-  
-  
-  /* Barra dos botões */
-  
-  .btn-group {
-    background-color: #996b42;
-    border: 1px solid rgba(14, 13, 13, 0);
-    color: white;
-    border-radius: 9px; /* Borda arredondada */
-    padding: 0px 0px;
-    margin-bottom: 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-
-    width: 100%;
-  }
-  
-  /* Efeito da Barra */
-  
-  .button:hover {
-    background-color: #ffffff;
-    color: white;
-  }
-  
-  /* Botões */  
-  
-  .button {
-    background-color:#996b42;
-    border: none;
-    color: rgb(250, 250, 250);
-    padding: 10px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  
-   /* Logo Zyoga */         
-   
-   h1 {
-        font-size: xx-large;
-        background-color: #70816a;
-   
-    }
-  
-  /* ---- */
-  
-    .login-container {
-      max-width: 300px;
-      margin: 50px auto;
-      padding: 2px;
-      background-color: #ffffff;
-      border: 10px solid #df040400; /* Adiciona a borda */
-      border-radius: 9px; /* Borda arredondada */
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+  body {
       
+      background-color: #f5e1ce;
+      font-family: Georgia, serif;
+    text-align: center;
+    
     }
     
-    h2 {
+    
+    /* Barra dos botões */
+    
+    .btn-group {
+      background-color: #996b42;
+      border: 1px solid rgba(14, 13, 13, 0);
+      color: white;
+      border-radius: 9px; /* Borda arredondada */
+      padding: 0px 0px;
+      margin-bottom: 30px;
       text-align: center;
-      font-family: 'Didot, serif';
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      cursor: pointer;
+  
+      width: 100%;
     }
-
-    #Entrar {
-        border-radius: 10px;
-        background-color: #996b42;
-        padding: 12px 24px;
-        color: #f5e1ce;
-        font-size: 14px;
-        margin: 0px auto;
-
+    
+    /* Efeito da Barra */
+    
+    .button:hover {
+      background-color: #ffffff;
+      color: white;
     }
-
-    #username {
-    border-radius: 7px;  
-    background-color: #996b42;
-    padding: 3px 30px;
-    color: #996b42;
-    font-size: medium;
-    margin: 0% auto;
-
+    
+    /* Botões */  
+    
+    .button {
+      background-color:#996b42;
+      border: none;
+      color: rgb(250, 250, 250);
+      padding: 10px 24px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
     }
-
-    #password {
-    border-radius: 7px;
-    background-color: #996b42;
-    padding: 3px 30px;
-    color: #996b42;
-    font-size: medium;
-    margin: 0% auto;
-    }
+    
+    
+     /* Logo Zyoga */         
+     
+     h1 {
+          font-size: xx-large;
+          background-color: rgba(112, 129, 106, 0);
+     
+      }
+    
+    /* ---- */
+    
+      .login-container {
+        max-width: 300px;
+        margin: 50px auto;
+        padding: 2px;
+        background-color: #dddddd;
+        border: 10px solid #df040400; /* Adiciona a borda */
+        border-radius: 9px; /* Borda arredondada */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+        
+      }
+      
+      h2 {
+        text-align: center;
+        font-family: 'Didot, serif';
+      }
+  
+      #Entrar {
+          border-radius: 10px;
+          background-color: #996b42;
+          padding: 12px 24px;
+          color: #f5e1ce;
+          font-size: 14px;
+          margin: 0px auto;
+  
+      }
+  
+      #username {
+      border-radius: 7px;  
+      background-color: #996b42;
+      padding: 3px 30px;
+      color: #996b42;
+      font-size: medium;
+      margin: 0% auto;
+  
+      }
+  
