--- a/tipos.css
+++ b/tipos.css
@@ -1,123 +1,91 @@
-html::after {
-    content: "";
-    position: absolute;
-    bottom: -20px;
-    left: 55px;
-         width: 87%;
-    height: 400px; /* Altura do quadrado */
-    background-color: rgb(255, 255, 255); /* Cor de fundo do quadrado */
-    z-index: -1; /* Para colocar o quadrado atrás de todo o conteúdo */
-    border-radius: 19px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-}
-body {
-    
-    background-color: #f5e1ce;
-    font-family:'Arial' ;
-    margin: 0;
-    text-align: center;
-    letter-spacing: 2; /* Ajuste conforme necessário */
+* {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
   padding: 0;
-    
-  }
+ }
 
-    .btn-group {
-      background-color: #ad8b6d;
-      border: 0px solid rgb(14, 13, 13);
-      color: white;
-      padding: 0px 0px;
-      margin-bottom: 30px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      cursor: pointer;
-       width: 100%;
-    }
-    
-    /* Efeito da Barra */
-    
-    .button:hover {
-      background-color: #ffffff;
-      color: rgb(96, 76, 64);
-    }
-    
-    /* Botões */  
-    
-    .button {
-      background-color: #ad8b6d;
-      border: none;
-      color: rgb(250, 250, 250);
-      padding: 10px 24px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-    }
-    
-    
-     /* Logo Zyoga */         
-  
-    
-    /* ---- */   
-      
-         
-  
-  .header {
-      background-color:  #ad8b6d;
-      padding: 20px;
-      text-align: center;
-  }
+nav {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0;
+  align-items: center;
+  color: #202020;
+  background-color:#77A290 ;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
+.logo {
+  font-weight: 800;
+  font-size: 25px;
   
-  #nome_cad {
-    border-radius: 7px;  
-    background-color: #f1dfcf;
-    padding: 3px 30px;
-    color: #ffffff;
-    font-size: medium;
-    margin: 0% auto;
-    border: none;
-   text-align: justify;
-  }
-  
-  #email_cad {
-  border-radius: 7px;  
-  background-color: #f1dfcf;
-  padding: 3px 30px;
-  color: #ffffff;
-  font-size: medium;
-  margin: 0% auto;
-  border: none
-  
-  }
-  
-  #senha_cad {
-  border-radius: 7px;
-  background-color: #f1dfcf;
-  padding: 3px 30px;
-  color: #996b42;
-  font-size: medium;
-  margin: 0% auto;
-  border: none
-  }
+}
 
-  #celular_cad {
-    border-radius: 7px;
-    background-color: #f1dfcf;
-    padding: 3px 30px;
-    color: #996b42;
-    font-size: medium;
-    margin: 0% auto;
-    border: none
-    }
-    
-    #cadastrar {
-        border-radius: 10px;
-        background-color: #ad8b6d;
-        padding: 12px 24px;
-        color: #ffffff;
-        font-size: 14px;
-        margin: 0px auto;
-        border: none
-    }    
+.nav-itens {
+  list-style: none;
+  display: flex;
+  font-size: 18px;
+  color: #fbeed3;
+  
+}
+
+.nav-itens>li>a {
+  padding-left: 20px;
+  color:#fbeed3;
+  text-decoration: none;
+  
+}
+#af:hover {
+  background-color: #6D997A;
+  color: white;
+  padding: 30px 8px;
+  margin:auto;
+  
+}
+
+.login {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #202020;
+  background-color: #fff;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #42282c;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro:hover {
+  background-color: #3d3d3d;
+}
+
+.objectImage {
+  width: 100%;
+  height:350px;
+  object-fit: cover;
+  object-position: center;
+  max-width: 100%;
+  
+}
+
+#yoga{
+  text-align: center;
+}
+.list {
+width: 80%;
+margin: 0 auto;
+padding: 20px; 
+text-align: center; 
+list-style: none;}
+
