--- a/cadastro.css
+++ b/cadastro.css
@@ -75,55 +75,75 @@
         text-align: center;
     }
   
-    
-    #nome_cad {
-      border-radius: 7px;  
-      background-color: #f1dfcf;
-      padding: 3px 30px;
-      color: #ffffff;
-      font-size: medium;
-      margin: 0% auto;
-      border: none;
-     text-align: justify;
-    }
-    
-    #email_cad {
-    border-radius: 7px;  
-    background-color: #f1dfcf;
-    padding: 3px 30px;
-    color: #ffffff;
-    font-size: medium;
-    margin: 0% auto;
-    border: none
-    
-    }
-    
-    #senha_cad {
-    border-radius: 7px;
-    background-color: #f1dfcf;
-    padding: 3px 30px;
-    color: #996b42;
-    font-size: medium;
-    margin: 0% auto;
-    border: none
-    }
-  
-    #celular_cad {
-      border-radius: 7px;
-      background-color: #f1dfcf;
-      padding: 3px 30px;
-      color: #996b42;
-      font-size: medium;
-      margin: 0% auto;
-      border: none
-      }
-      
-      #cadastrar {
-          border-radius: 10px;
-          background-color: #ad8b6d;
-          padding: 12px 24px;
-          color: #ffffff;
-          font-size: 14px;
-          margin: 0px auto;
-          border: none
-      }    
+    .cadastro-aluno {
+    margin-top: 15px;
+}
+
+    form {
+    max-width: 400px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+    form h2 {
+    margin-bottom: 20px;
+    color: #854f2c;
+    font-weight: bold; /* Adicionando negrito */
+}
+
+    form p {
+    margin-bottom: 10px;
+}
+
+    form p label {
+    font-weight: bold; /* Adicionando negrito */
+}
+
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.section {
+    margin-bottom: 20px;
+}
+
+.section strong {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.section label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.section input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+input[type="submit"] {
+    width: 100%;
+    background-color: #854f2c;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #6b3d1d;
+}
