--- a/login.css
+++ b/login.css
@@ -1,105 +1,127 @@
- * {
-  font-family: "Crimson Pro", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
- }
-
-body {
+* {
+    font-family: "Crimson Pro", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+   }
+  
+  body {
+      
+    background-color: #f5e1ce;
+    font-family:'Arial' ;
+  text-align: center;
+  margin: 0;
+  padding: 0;
     
-  background-color: #f5e1ce;
-  font-family:'Arial' ;
-text-align: center;
-margin: 0;
-padding: 0;
-  
-}
-  /* Barra dos botões */
-  
-  .btn-group {
-    background-color: #ad8b6d;
-    border: 0px solid rgb(14, 13, 13);
-    color: white;
-    padding: 0px 0px;
-    margin-bottom: 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-     width: 100%;
   }
-  
-  /* Efeito da Barra */
-  
-  .button:hover {
-    background-color: #ffffff;
-    color: rgb(96, 76, 64);
-  }
-  
-  /* Botões */  
-  
-  .button {
-    background-color: #ad8b6d;
-    border: none;
-    color: rgb(250, 250, 250);
-    padding: 10px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  
-   /* Logo Zyoga */         
-
-  
-  /* ---- */   
+    /* Barra dos botões */
     
-    .login-container {
-      max-width: 300px;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #fff;
-      border: 0px solid;
-      border-radius: 19px; /* Borda arredondada */
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+    .btn-group {
+      background-color: #ad8b6d;
+      border: 0px solid rgb(14, 13, 13);
+      color: white;
+      padding: 0px 0px;
+      margin-bottom: 30px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      cursor: pointer;
+       width: 100%;
     }
     
+    /* Efeito da Barra */
+    
+    .button:hover {
+      background-color: #ffffff;
+      color: rgb(96, 76, 64);
+    }
+    
+    /* Botões */  
+    
+    .button {
+      background-color: #ad8b6d;
+      border: none;
+      color: rgb(250, 250, 250);
+      padding: 10px 24px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+    
+    
+     /* Logo Zyoga */         
+  
+    
+    /* ---- */   
+      
+      .login-container {
+        max-width: 300px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        border: 0px solid;
+        border-radius: 19px; /* Borda arredondada */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+      }
+      
+  
+  .header {
+      background-color:  #ad8b6d;
+      padding: 20px;
+      text-align: center;
+  }
+  
+  #Entrar {
+      border-radius: 10px;
+      background-color: #ad8b6d;
+      padding: 12px 24px;
+      color: #ffffff;
+      font-size: 14px;
+      margin: 0px auto;
+      border: none
+  
+  }
+  
+  #username {
+  border-radius: 7px;  
+  background-color: #f1dfcf;
+  padding: 3px 30px;
+  color: #ffffff;
+  font-size: medium;
+  margin: 0% auto;
+  border: none
+  
+  }
+  
+  #password {
+  border-radius: 7px;
+  background-color: #f1dfcf;
+  padding: 3px 30px;
+  color: #996b42;
+  font-size: medium;
+  margin: 0% auto;
+  border: none
+  }
 
-.header {
-    background-color:  #ad8b6d;
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
     padding: 20px;
-    text-align: center;
-}
-
-#Entrar {
-    border-radius: 10px;
+  }
+  
+  .floating-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
     background-color: #ad8b6d;
-    padding: 12px 24px;
-    color: #ffffff;
-    font-size: 14px;
-    margin: 0px auto;
-    border: none
-
-}
-
-#username {
-border-radius: 7px;  
-background-color: #f1dfcf;
-padding: 3px 30px;
-color: #ffffff;
-font-size: medium;
-margin: 0% auto;
-border: none
-
-}
-
-#password {
-border-radius: 7px;
-background-color: #f1dfcf;
-padding: 3px 30px;
-color: #996b42;
-font-size: medium;
-margin: 0% auto;
-border: none
-}
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .floating-btn:hover {
+    background-color: #474c52;
+  }
