--- a/cadastro.css
+++ b/cadastro.css
@@ -1,147 +1,164 @@
 * {
-    font-family: "Crimson Pro", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-   }
-  
-    html::after {
-      content: "";
-      position: absolute;
-      bottom: -20px;
-      left: 55px;
-           width: 87%;
-      height: 400px; /* Altura do quadrado */
-      background-color: rgb(255, 255, 255); /* Cor de fundo do quadrado */
-      z-index: -1; /* Para colocar o quadrado atrás de todo o conteúdo */
-      border-radius: 19px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+ }
+
+body {    
+    margin: 0;
+    text-align: center;
+    letter-spacing: 2; 
+  padding: 0;
+    
   }
-  body {
-      
-      background-color: #f5e1ce;
-      font-family:'Arial' ;
-      margin: 0;
+          
+  
+  .header {
+      background-color:  #ad8b6d;
+      padding: 20px;
       text-align: center;
-      letter-spacing: 2; /* Ajuste conforme necessário */
-    padding: 0;
-      
-    }
+  }
+
+  .cadastro-aluno {
+  margin-top: 15px;
+}
+
+  form {
+  max-width: 400px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
+}
+
+  form h2 {
+  margin-bottom: 20px;
+  color: #854f2c;
+  font-weight: bold; /* Adicionando negrito */
   
-      .btn-group {
-        background-color: #ad8b6d;
-        border: 0px solid rgb(14, 13, 13);
-        color: white;
-        padding: 0px 0px;
-        margin-bottom: 30px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        cursor: pointer;
-         width: 100%;
-      }
-      
-      /* Efeito da Barra */
-      
-      .button:hover {
-        background-color: #ffffff;
-        color: rgb(96, 76, 64);
-      }
-      
-      /* Botões */  
-      
-      .button {
-        background-color: #ad8b6d;
-        border: none;
-        color: rgb(250, 250, 250);
-        padding: 10px 24px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-      }
-      
-      
-       /* Logo Zyoga */         
-    
-      
-      /* ---- */   
-        
-           
-    
-    .header {
-        background-color:  #ad8b6d;
-        padding: 20px;
-        text-align: center;
-    }
-  
-    .cadastro-aluno {
-    margin-top: 15px;
 }
 
-    form {
-    max-width: 400px;
-    width: 100%;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  form p {
+  margin-bottom: 10px;
 }
 
-    form h2 {
-    margin-bottom: 20px;
-    color: #854f2c;
-    font-weight: bold; /* Adicionando negrito */
+  form p label {
+  font-weight: bold; /* Adicionando negrito */
 }
 
-    form p {
-    margin-bottom: 10px;
-}
-
-    form p label {
-    font-weight: bold; /* Adicionando negrito */
-}
-
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .section {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .section strong {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 .section label {
-    display: block;
-    margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 .section input[type="checkbox"] {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 input[type="submit"] {
-    width: 100%;
-    background-color: #854f2c;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  width: 100%;
+  background-color: #854f2c;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #6b3d1d;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0;
+  align-items: center;
+  color: #202020;
+  background-color:#77A290 ;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+  font-weight: 800;
+  font-size: 25px;
+  
+}
+
+.nav-itens {
+  list-style: none;
+  display: flex;
+  font-size: 18px;
+  color: #fbeed3;
+  
+}
+
+.nav-itens>li>a {
+  padding-left: 20px;
+  color:#fbeed3;
+  text-decoration: none;
+  
+}
+#af:hover {
+  background-color: #6D997A;
+  color: white;
+  padding: 30px 8px;
+  margin:auto;
+  
+}
+
+.login {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #202020;
+  background-color: #fff;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #42282c;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro:hover {
+  background-color: #3d3d3d;
 }
 
 input[type="submit"]:hover {
