--- a/tipos.css
+++ b/tipos.css
@@ -4,45 +4,36 @@
   font-style: normal;
   margin: 0;
   padding: 0;
+  color: inherit; 
+  text-decoration: none;
  }
 
 nav {
   display: flex;
   justify-content: space-around;
-  margin-top: 0;
   align-items: center;
-  color: #202020;
   background-color:#77A290 ;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.logo {
-  font-weight: 800;
-  font-size: 25px;
-  
-}
-
-.nav-itens {
-  list-style: none;
-  display: flex;
   font-size: 18px;
-  color: #fbeed3;
-  
 }
 
-.nav-itens>li>a {
-  padding-left: 20px;
-  color:#fbeed3;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+   display: flex;
+  }
+   
+  li a {
+   color:  #fbeed3;
+   text-align: center;
+  padding: 30px 16px;
   text-decoration: none;
+  }
   
-}
-#af:hover {
-  background-color: #6D997A;
-  color: white;
-  padding: 30px 8px;
-  margin:auto;
-  
-}
+  li a:hover {
+    background-color: #6D997A;
+  }
 
 .login {
   padding: 10px 40px;
@@ -53,6 +44,7 @@ nav {
   background-color: #fff;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
+ 
 }
 
 .cadastro {
@@ -70,18 +62,18 @@ nav {
   background-color: #3d3d3d;
 }
 
-.objectImage {
+div.retangulo {
+  background-image: url(https://live.staticflickr.com/65535/53630130141_4ea8508526_k.jpg);
+  display: inline-block;
   width: 100%;
-  height:350px;
-  object-fit: cover;
-  object-position: center;
-  max-width: 100%;
-  
-}
+  height: 300px;
+background-position: center;
+box-shadow: px 0px 100px rgba(0, 0, 0, 0.1)}
 
 #yoga{
   text-align: center;
 }
+
 .list {
 width: 80%;
 margin: 0 auto;
@@ -89,3 +81,17 @@ padding: 20px;
 text-align: center; 
 list-style: none;}
 
+p {
+  margin: 10px;
+  padding: 100px;
+  padding-top: 10px;
+  text-align: justify;
+  text-indent: 50px;
+}
+.final{
+ background-color: #77A290;
+text-align: center;
+}
+
+.list
+{color:#088f88}
