--- a/quemsomos.css
+++ b/quemsomos.css
@@ -1,61 +1,79 @@
 * {
-    font-family: "Crimson Pro", serif;
+    font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    margin: 0;
+    padding: 0;
+    color: inherit; 
+    text-decoration: none;
    }
   
-  body {
-      
-      background-color: #f5e1ce;
-      font-family: Georgia, serif;
-    text-align: center;
-    
-    }
-    
-    
-    /* Barra dos botões */
-    
-    .btn-group {
-      background-color: #996b42;
-      border: 1px solid rgba(14, 13, 13, 0);
-      color: white;
-      border-radius: 9px; /* Borda arredondada */
-      padding: 0px 0px;
-      margin-bottom: 30px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      cursor: pointer;
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color:#77A290 ;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+  }
   
-      width: 100%;
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+     display: flex;
     }
-    
-    /* Efeito da Barra */
-    
-    .button:hover {
-      background-color: rgb(158, 115, 86);
-      color: white;
-    }
-    
-    /* Botões */  
-    
-    .button {
-      background-color:#996b42;
-      border: none;
-      color: rgb(250, 250, 250);
-      padding: 10px 24px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-    }
-    
-    
-     /* Logo Zyoga */         
      
-     h1 {
-          font-size: xx-large;
-          background-color: rgba(112, 129, 106, 0);
-     
-      }
+    li a {
+     color:  #fbeed3;
+     text-align: center;
+    padding: 30px 16px;
+    text-decoration: none;
+    }
+    
+    li a:hover {
+      background-color: #6D997A;
+    }
+  
+  .login {
+    padding: 10px 40px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    color: #202020;
+    background-color: #fff;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+   
+  }
+  
+  .cadastro {
+    padding: 10px 40px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #42282c;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+  }
+  
+  .cadastro:hover {
+    background-color: #3d3d3d;
+  }
+  
+  div.retangulo {
+    background-image: url(https://live.staticflickr.com/65535/53630130141_4ea8508526_k.jpg);
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+  background-position: center;
+  box-shadow: px 0px 100px rgba(0, 0, 0, 0.1)}
+  
+ 
+  .final{
+   background-color: #77A290;
+  text-align: center;
+  }
+  
+
