--- a/login.css
+++ b/login.css
@@ -1,127 +1,146 @@
 * {
-    font-family: "Crimson Pro", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-   }
-  
-  body {
-      
-    background-color: #f5e1ce;
-    font-family:'Arial' ;
-  text-align: center;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   margin: 0;
   padding: 0;
-    
-  }
-    /* Barra dos botões */
-    
-    .btn-group {
-      background-color: #ad8b6d;
-      border: 0px solid rgb(14, 13, 13);
-      color: white;
-      padding: 0px 0px;
-      margin-bottom: 30px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      cursor: pointer;
-       width: 100%;
-    }
-    
-    /* Efeito da Barra */
-    
-    .button:hover {
-      background-color: #ffffff;
-      color: rgb(96, 76, 64);
-    }
-    
-    /* Botões */  
-    
-    .button {
-      background-color: #ad8b6d;
-      border: none;
-      color: rgb(250, 250, 250);
-      padding: 10px 24px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-    }
-    
-    
-     /* Logo Zyoga */         
-  
-    
-    /* ---- */   
-      
-      .login-container {
-        max-width: 300px;
-        margin: 50px auto;
-        padding: 20px;
-        background-color: #fff;
-        border: 0px solid;
-        border-radius: 19px; /* Borda arredondada */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-      }
-      
-  
-  .header {
-      background-color:  #ad8b6d;
-      padding: 20px;
-      text-align: center;
-  }
-  
-  #Entrar {
-      border-radius: 10px;
-      background-color: #ad8b6d;
-      padding: 12px 24px;
-      color: #ffffff;
-      font-size: 14px;
-      margin: 0px auto;
-      border: none
-  
-  }
-  
-  #username {
-  border-radius: 7px;  
-  background-color: #f1dfcf;
-  padding: 3px 30px;
-  color: #ffffff;
-  font-size: medium;
-  margin: 0% auto;
-  border: none
-  
-  }
-  
-  #password {
-  border-radius: 7px;
-  background-color: #f1dfcf;
-  padding: 3px 30px;
-  color: #996b42;
-  font-size: medium;
-  margin: 0% auto;
-  border: none
-  }
+ }
 
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .floating-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #ad8b6d;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .floating-btn:hover {
-    background-color: #474c52;
-  }
+ nav {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0;
+  align-items: center;
+  color: #202020;
+  background-color:#77A290 ;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+ display: flex;
+}
+ 
+li a {
+ color:  #fbeed3;
+ text-align: center;
+padding: 30px 16px;
+text-decoration: none;
+}
+
+li a:hover {
+  background-color: #6D997A;
+}
+
+.login {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #202020;
+  background-color: #fff;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro {
+  padding: 10px 40px;
+  font-size: 15px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #42282c;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+.cadastro:hover {
+  background-color: #3d3d3d;
+}
+
+footer {
+  margin-bottom: 20px;
+}
+
+form {
+  max-width: 400px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  width: 80%;
+  max-width: 400px;
+  text-align: left;
+}
+
+form h2 {
+  margin-bottom: 20px;
+  color: #854f2c;
+  font-weight: bold;
+}
+
+form p {
+  margin-bottom: 10px;
+}
+
+form p label {
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+.section {
+  margin-bottom: 20px;
+}
+
+.section strong {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.section label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.section input[type="checkbox"] {
+  margin-right: 5px;
+} 
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #854f2c;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #6b3d1d;
+}
+
+.final{
+  background-color: #6D997A;
+ text-align: center;
+ margin-bottom: 20px;
+   }
