--- a/tipos.css
+++ b/tipos.css
@@ -70,6 +70,21 @@ div.retangulo {
 background-position: center;
 box-shadow: px 0px 100px rgba(0, 0, 0, 0.1)}
 
+div.quadrado {
+  background-image: url(https://live.staticflickr.com/65535/52015372646_7fabb9ba29_b.jpg);
+  ;
+  width: 100%;
+  height: 400px;
+background-position: center;
+margin-left: 30px;
+border-radius: 200px;
+}
+div.conteudo{
+  display: flex;
+  background-color: #d9e2d4;
+  padding: 30px;
+}
+
 #yoga{
   text-align: center;
 }
@@ -81,13 +96,15 @@ padding: 20px;
 text-align: center; 
 list-style: none;}
 
-p {
-  margin: 10px;
-  padding: 100px;
+div.texto {
+  margin: 40px;
+  padding: 10px;
   padding-top: 10px;
   text-align: justify;
-  text-indent: 50px;
+  text-indent: 60px;
+
 }
+
 .final{
  background-color: #77A290;
 text-align: center;
@@ -95,3 +112,4 @@ text-align: center;
 
 .list
 {color:#088f88}
+
