--- a/feedback.css
+++ b/feedback.css
@@ -1,101 +1,141 @@
 * {
-    font-family: "Crimson Pro", serif;
+    font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-   }
-  
-  body {
-      
-      background-color: #f5e1ce;
-      font-family: Georgia, serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #fbeed3;
+    background-color: #77A290;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px 0;
+}
+
+.logo {
+    font-weight: 800;
+    font-size: 25px;
+}
+
+.nav-itens {
+    list-style: none;
+    display: flex;
+    font-size: 18px;
+}
+
+.nav-itens > li > a {
+    padding-left: 20px;
+    color: #fbeed3;
+    text-decoration: none;
+}
+
+#af:hover {
+    background-color: #6D997A;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.login,
+.cadastro {
+    padding: 10px 30px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.login {
+    color: #202020;
+    background-color: #fff;
+}
+
+.cadastro {
+    color: #fff;
+    background-color: #42282c;
+}
+
+.cadastro:hover {
+    background-color: #3d3d3d;
+}
+
+.content {
+    background-color: #f9f9f9; /* Cor de fundo desejada para a área de feedback */
+    padding: 40px; /* Adicione o preenchimento desejado */
+    width: 80%;
+    max-width: 600px;
+    margin: 50px auto 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+}
+
+.content h1 {
     text-align: center;
-    
-    }
-    
-    
-    /* Barra dos botões */
-    
-    .btn-group {
-      background-color: #996b42;
-      border: 1px solid rgba(14, 13, 13, 0);
-      color: white;
-      border-radius: 9px; /* Borda arredondada */
-      padding: 0px 0px;
-      margin-bottom: 30px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      cursor: pointer;
-  
-      width: 100%;
-    }
-    
-    /* Efeito da Barra */
-    
-    .button:hover {
-      background-color: rgb(158, 115, 86);
-      color: white;
-    }
-    
-    /* Botões */  
-    
-    .button {
-      background-color:#996b42;
-      border: none;
-      color: rgb(250, 250, 250);
-      padding: 10px 24px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-    }
-    
-    
-     /* Logo Zyoga */         
-     
-     h1 {
-          font-size: xx-large;
-          background-color: rgba(112, 129, 106, 0);
-     
-      }
-    
-    /* ---- */
-    
-      .login-container {
-        max-width: 300px;
-        margin: 50px auto;
-        padding: 2px;
-        background-color: #eeeeee;
-        border: 10px solid #df040400; /* Adiciona a borda */
-        border-radius: 9px; /* Borda arredondada */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-        
-      }
-      
-      h2 {
-        text-align: center;
-        font-family: 'Didot, serif';
-      }
-  
-      #Entrar {
-          border-radius: 10px;
-          background-color: #996b42;
-          padding: 12px 24px;
-          color: #a06631;
-          font-size: 14px;
-          margin: 0px auto;
-  
-      }
-    
-      
-      #username {
-      border-radius: 7px;  
-      background-color: #996b42;
-      padding: 3px 30px;
-      color: #996b42;
-      font-size: medium;
-      margin: 0% auto;
-  
-      }
-  
+    margin-bottom: 30px;
+    color: #333;
+    font-size: 28px;
+}
+
+.content form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content form label {
+    margin-bottom: 10px;
+    color: #555;
+    font-size: 18px;
+}
+
+.content form input[type="text"],
+.content form textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+#username {
+    width: 60%;
+}
+
+.content form input[type="file"] {
+    margin-bottom: 20px;
+}
+
+.content form input[type="submit"] {
+    width: 100%;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 8px;
+    background-color: #77A290;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 18px;
+}
+
+.content form input[type="submit"]:hover {
+    background-color: #6D997A;
+}
+
+.footer {
+    bottom: 0;
+    width: 100%;
+    background-color: #77A290;
+    color: #000000;
+    text-align: center;
+    padding: 20px;
+}
