--- a/profs.css
+++ b/profs.css
@@ -1,91 +1,112 @@
 * {
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  margin: 0;
-  padding: 0;
-  color: inherit; 
-  text-decoration: none;
- }
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+}
 
- nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color:#77A290 ;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  font-size: 18px;
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #202020;
+    background-color:#77A290 ;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-  
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
- display: flex;
+
+.logo {
+    font-weight: 800;
+    font-size: 25px;
 }
-     
-li a {
-  color:  #fbeed3;
-  text-align: center;
- padding: 30px 16px;
- text-decoration: none;
- }
-    
-li a:hover {
-  background-color: #6D997A;
+
+.nav-itens {
+    list-style: none;
+    display: flex;
+    font-size: 18px;
+    color: #fbeed3;
 }
-  
+
+.nav-itens>li>a {
+    padding-left: 20px;
+    color:#fbeed3;
+    text-decoration: none;
+}
+
+.login, .cadastro {
+    padding: 10px 40px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+}
+
 .login {
-  padding: 10px 40px;
-  font-size: 15px;
-  border: none;
-  border-radius: 5px;
-  color: #202020;
-  background-color: #fff;
-  font-family: 'Poppins', sans-serif;
-  cursor: pointer;
-}
-  
-.cadastro {
-  padding: 10px 40px;
-  font-size: 15px;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  background-color: #42282c;
-  font-family: 'Poppins', sans-serif;
-  cursor: pointer;
-}
-  
-.cadastro:hover {
-  background-color: #3d3d3d;
-}
-  
-  
-.conteudo{
-  display: flex;
-  background-color: #d9e2d4;
-  padding: 30px;
-}
-  
-.texto {
-  margin: 40px;
-  padding: 10px;
-  padding-top: 10px;
-  text-align: justify;
-  text-indent: 60px;
-}
-  
-.final{
-  background-color: #77A290;
-  text-align: center;
+    color: #202020;
+    background-color: #fff;
 }
 
-.imagem {
-  width: auto; 
-  max-height: 100%;
+.cadastro {
+    color: #fff;
+    background-color: #42282c;
+}
+
+.cadastro:hover {
+    background-color: #3d3d3d;
+}
+
+.conteudo {
+    display: flex;
+    flex-wrap: wrap-reverse; /* Inverte a ordem dos elementos e permite que eles quebrem para a próxima linha em telas menores */
+    justify-content: space-between; /* Distribui os elementos horizontalmente */
+    align-items: center; /* Alinha os elementos verticalmente */
+    background-color: #f4f4f4;
+    padding: 30px;
+    border-radius: 10px;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .titulo {
-  font-size: 40px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.texto {
+    flex: 1; /* Ocupa o espaço restante */
+    margin-right: 20px; /* Ajusta a margem direita para separar o texto da imagem */
+    text-align: justify;
+    font-size: 20px;
+}
+
+.imagem img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px; /* Adiciona borda arredondada à imagem */
+}
+
+.inscreva-se {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.inscreva-se-btn {
+    display: inline-block;
+    padding: 20px 28px;
+    font-size: 18px;
+    border-radius: 5px;
+    background-color: #77A290;
+    color: #fff;
+    transition: background-color 0.3s ease;
+}
+
+.inscreva-se-btn:hover {
+    background-color: #6D997A;
+}
+
+.footer {
+    background-color: #77A290;
+    color: #000000;
+    text-align: center;
+    padding: 20px;
 }
