--- a/profs.css
+++ b/profs.css
@@ -103,6 +103,18 @@ nav {
 .inscreva-se-btn:hover {
     background-color: #6D997A;
 }
+ .floating-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #85572d;
+            padding: 12px 24px;
+            color: #ffffff;
+            font-size: 14px;
+            margin: 0px auto;
+            border: none;
+            border-radius: 20px;
+        }
 
 .footer {
     background-color: #77A290;
