--- a/index.css
+++ b/index.css
@@ -262,7 +262,7 @@ section.portfolio .flex {
     opacity: 1;
 }
 
-/* ESTILO DO FORMULÁRIO DE CONTATO */
+/* ESTILO DO FORMULÁRIO */
 section.formulario {
     padding: 80px 4%;
 }
